# transfer-function-eval-engine

./: CMakeLists.txt  README.md  note.txt
TFImpl/: ANDImpl.h  AddImpl.h  AshrExactImpl.h  AshrImpl.h  LLVMImpl.h  LshrExactImpl.h  LshrImpl.h  MulImpl.h  ORImpl.h  SdivExactImpl.h  SdivImpl.h  ShlImpl.h  ShlNswImpl.h  ShlNswNuwImpl.h  ShlNuwImpl.h  SubImpl.h  Utils.h  XORImpl.h
data/: KnownBitsData.tsv
include/: DataSampler.h  EvaluationBatch.h  EvaluationEngine.h  EvaluationParameter.h  EvaluationResult.h  EvaluationTypes.h  HEADER_INCLUDE_PATH.h  JIT.h
src/: DataSampler.cpp  EvaluationBatch.cpp  EvaluationEngine.cpp  EvaluationParameter.cpp  EvaluationResult.cpp  JIT.cpp  main.cpp
test/: knownBitsTest.cpp  pattern-benchmark-test.cpp  pattern-test.cpp  pattern.cpp  spec-test.cpp  vec.cpp
